k8s_deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nylabankservice
spec:
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: nylabankservice
  type: ClusterIP
---
